# discord-bot-connector

./: Cargo.toml  README.md
src/: commands.rs  main.rs  songbird_handler.rs
src/commands/: cancel.rs  join.rs  left.rs  ping.rs  timer.rs
src/voicevox/: api.rs
