[package]
name = "discord-bot-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
serenity = { version = "0.11.7", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
songbird = "0.3.2"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.73"
anyhow = "1.0.75"
thiserror = "1.0.50"
bytes = "1.5.0"
reqwest = "0.11.22"
timer = "0.2.0"
chrono = "0.4.31"
tokio-util = "0.7.10"
